# plasma-phone-sim

./: CMakeLists.txt  DeviceSvg.md  README.md  deviceview.cpp  deviceview.h  main.cpp  packages.cpp  phoneview.cpp  phoneview.h  simapi.cpp  simapi.h
qml/default/: metadata.desktop
qml/default/contents/ui/: main.qml
qml/screens/contents/images/: nexus5.svgz
